# budgie-screenshot-applet

./: .gitignore  Makefile.am  README.md  autogen.sh  common.mk  configure.ac  meson.build
.tx/: config
budgie-screenshot-applet/: AutomaticScrollBox.vala  CountdownView.vala  ErrorView.vala  HistoryView.vala  HistoryViewItem.vala  Makefile.am  NewScreenshotView.vala  ScreenshotApplet.plugin  ScreenshotApplet.vala  SettingsView.vala  UploadDoneView.vala  UploadingView.vala
data/: Makefile.am  ScreenshotApplet.plugin  budgie-screenshot-applet.appdata.xml  com.github.cybre.budgie-screenshot-applet.appdata.xml  com.github.cybre.budgie-screenshot-applet.gresource.xml  com.github.cybre.budgie-screenshot-applet.gschema.xml  meson.build  plugin.gresource.xml  screenshot-applet-images.gresource.xml  settings.ui  style.css
data/schemas/: com.github.cybre.budgie-screenshot-applet.provider.ftp.gschema.xml
data/style/: style-318.css  style.css
data/ui/: history_item.ui  history_placeholder.ui  history_view.ui  main_view.ui  settings_view.ui
data/ui/providers/: ftp_settings.ui
po/: LINGUAS  POTFILES  POTFILES.in  POTFILES.skip  budgie-screenshot-applet.pot  ca.po  da.po  de.po  es.po  es_AR.po  fi.po  fr.po  id.po  lt.po  meson.build  nl_BE.po  nl_NL.po  pl_PL.po  pt_BR.po  ro_RO.po  sr_RS.gmo  sr_RS.po  sr_RS@latin.gmo  sr_RS@latin.po  sv.po  update_linguas.sh
screenshot-applet/: AutomaticScrollBox.vala  CountdownView.vala  ErrorView.vala  HistoryView.vala  HistoryViewItem.vala  Makefile.am  NewScreenshotView.vala  ScreenshotApplet.plugin  ScreenshotApplet.vala  SettingsView.vala  UploadDoneView.vala  UploadingView.vala  com.github.cybre.screenshot-applet.gschema.xml  plugin.gresource.xml  settings.ui  settings.ui~
src/: ScreenshotApplet.vala  config.h.in  meson.build
src/Backend/: BackendUtil.vala  ScreenshotManager.vala  SettingsManager.vala  Uploader.vala
src/Backend/Providers/: Catbox.vala  FTP.vala  IProvider.vala  Ibin.vala  Imgur.vala  NilxNil.vala  Tempfiles.vala
src/Backend/ScreenshotMode/: Screen.vala  ScreenshotAbstract.vala  Selection.vala  Window.vala
src/Views/: FileChooserView.vala  HistoryView.vala  MainView.vala  SettingsView.vala
src/Widgets/: AreaSelectionWindow.vala  AutomaticScrollBox.vala  HistoryItem.vala  IndicatorIcon.vala  IndicatorWindow.vala  MainStack.vala  QuickSettings.vala  ScreenshotModeButton.vala
vapi/: config.vapi  gdesktopenums-3.0.vapi  gnome-desktop-3.0.deps  gnome-desktop-3.0.vapi  libcurl.vapi
