EXTRA_DIST = \
	${top_srcdir}/common.mk \
	${top_srcdir}/README.md \
	${top_srcdir}/LICENSE \
	${top_srcdir}/intltool-extract.in \
	${top_srcdir}/intltool-update.in \
	${top_srcdir}/intltool-merge.in

DISTCLEANFILES = \
	${top_srcdir}/intltool-extract \
	${top_srcdir}/intltool-update \
	${top_srcdir}/intltool-merge \
	${top_srcdir}/po/.intltool-merge-cache

SUBDIRS = \
	data \
	budgie-screenshot-applet \
	po
