project('budgie-screenshot-applet', 'vala', 'c',
        version: '0.4.0',
        meson_version: '>=0.36.0',
        license: 'GPL2')

LIB_INSTALL_DIR = join_paths(get_option('prefix'), get_option('libdir'), 'budgie-desktop', 'plugins', meson.project_name())

subdir('src')
subdir('data')
subdir('po')