datadir = get_option('datadir')

install_data('ScreenshotApplet.plugin',
             install_dir: LIB_INSTALL_DIR)

install_data('com.github.cybre.budgie-screenshot-applet.gschema.xml',
             install_dir: join_paths(datadir, 'glib-2.0' ,'schemas'))

install_data('com.github.cybre.budgie-screenshot-applet.appdata.xml',
             install_dir: join_paths(datadir, 'appstream'))